Finish data collection part

--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -64,6 +64,72 @@ background
 }
 
 % ranking frauds related content starts from here
+@article{ott2011finding,
+	title={Finding deceptive opinion spam by any stretch of the imagination},
+	author={Ott, Myle and Choi, Yejin and Cardie, Claire and Hancock, Jeffrey T},
+	journal={arXiv preprint arXiv:1107.4557},
+	year={2011}
+}
+
+@inproceedings{maas2011learning,
+	title={Learning word vectors for sentiment analysis},
+	author={Maas, Andrew and Daly, Raymond E and Pham, Peter T and Huang, Dan and Ng, Andrew Y and Potts, Christopher},
+	booktitle={Proceedings of the 49th annual meeting of the association for computational linguistics: Human language technologies},
+	pages={142--150},
+	year={2011}
+}
+
+@inproceedings{jindal2008opinion,
+	title={Opinion spam and analysis},
+	author={Jindal, Nitin and Liu, Bing},
+	booktitle={Proceedings of the 2008 international conference on web search and data mining},
+	pages={219--230},
+	year={2008}
+}
+
+@inproceedings{wu2010distortion,
+	title={Distortion as a validation criterion in the identification of suspicious reviews},
+	author={Wu, Guangyu and Greene, Derek and Smyth, Barry and Cunningham, P{\'a}draig},
+	booktitle={Proceedings of the first workshop on social media analytics},
+	pages={10--13},
+	year={2010}
+}
+
+@inproceedings{rayana2015collective,
+	title={Collective opinion spam detection: Bridging review networks and metadata},
+	author={Rayana, Shebuti and Akoglu, Leman},
+	booktitle={Proceedings of the 21th acm sigkdd international conference on knowledge discovery and data mining},
+	pages={985--994},
+	year={2015}
+}
+
+@article{shehnepoor2017netspam,
+	title={Netspam: A network-based spam detection framework for reviews in online social media},
+	author={Shehnepoor, Saeedreza and Salehi, Mostafa and Farahbakhsh, Reza and Crespi, Noel},
+	journal={IEEE Transactions on Information Forensics and Security},
+	volume={12},
+	number={7},
+	pages={1585--1595},
+	year={2017},
+	publisher={IEEE}
+}
+
+@inproceedings{li2014towards,
+	title={Towards a general rule for identifying deceptive opinion spam},
+	author={Li, Jiwei and Ott, Myle and Cardie, Claire and Hovy, Eduard},
+	booktitle={Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+	pages={1566--1576},
+	year={2014}
+}
+
+@inproceedings{li2017bimodal,
+	title={Bimodal distribution and co-bursting in review spam detection},
+	author={Li, Huayi and Fei, Geli and Wang, Shuai and Liu, Bing and Shao, Weixiang and Mukherjee, Arjun and Shao, Jidong},
+	booktitle={Proceedings of the 26th International Conference on World Wide Web},
+	pages={1063--1072},
+	year={2017}
+}
+
 @inproceedings{lim2010detecting,
 	title={Detecting product review spammers using rating behaviors},
 	author={Lim, Ee-Peng and Nguyen, Viet-An and Jindal, Nitin and Liu, Bing and Lauw, Hady Wirawan},
@@ -265,7 +331,7 @@ title={Androzoo++: Collecting millions of android apps and their metadata for th
 author={Li, Li and Gao, Jun and Hurier, M{\'e}d{\'e}ric and Kong, Pingfan and Bissyand{\'e}, Tegawend{\'e} F and Bartel, Alexandre and Klein, Jacques and Traon, Yves Le},
 journal={arXiv preprint arXiv:1709.05281},
 year={2017}
-}
+}\
 
 # comment understanding
 @inproceedings{fu2013people,
