Modification on basic discoveries Not finished yet

--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -809,6 +809,12 @@ title = {{Mobile Gaming Apps Report}}
 	citedate = {September 26, 2018}
 }
 
+@online{setAppId,
+	title = {Set the application ID | Android Developers},
+	url = {https://developer.android.com/studio/build/application-id},
+	citedate = {August 13, 2020}
+}
+
 @online{Xiaomiappstore,
 	title = {Xiaomi App Store},
 	url = {http://app.mi.com/},
