--- a/edwin_2019/chapter-discoveries-behavior.tex
+++ b/edwin_2019/chapter-discoveries-behavior.tex
@@ -1,5 +1,5 @@
 % \section{Large-scale Empirical Study and Discoveries}
-\chapter{结合实例分析的仿冒应用特征解读}
+\chapter{仿冒应用的基本特征解读}
 \label{chp:discoveries}
 
 上一章节介绍了仿冒应用收集框架\mytool 的设计与实现。
