--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -50,9 +50,8 @@
 重打包应用侵害了应用原作者的知识产权，甚至可能具有恶意行为，因此也属于移动黑灰产范畴。
 目前针对重打包应用的相关工作分为三类，分别针对重打包应用的检测和防止应用被重打包，还有关于重打包的实证研究工作。
 
-在重打包应用检测方面，
-早期工作通过比对两两应用之间的信息获得应用之间的相似度。
-有基于应用指令序列的方法使用模糊哈希的方法提取出应用的摘要信息，如DroidMOSS和DroidAnalytics~\cite{DroidMOSS, Zheng2013DroidAnalyticsA}；
+在重打包应用检测方面，早期工作通过比对两两应用之间的信息获得应用之间的相似度。
+有研究者基于应用指令序列的方法使用模糊哈希的方法提取出应用的摘要信息，如DroidMOSS和DroidAnalytics~\cite{DroidMOSS, Zheng2013DroidAnalyticsA}；
 也有使用静态数据依赖构建程序依赖图(Program Dependency Graph, PDG)比对应用的方法，如DNADroid~\cite{DNADroid}和AnDarwin~\cite{AnDarwin}，Centroid~\cite{Centroid}甚至为应用中的每个函数构建了三维控制流图(3-Dimensional Control Flow Graph, 3D-CFG)，将三维控制流图聚合后，通过检测不同应用在控制图聚合后的质心位置判断应用间的相似程度；
 还有算法通过比对抽象语义树检测重打包应用，如Hanna等人的Juxtapp~\cite{hanna2012juxtapp}利用K-gram模型对应用的二进制操作码序列进行比对，CLANdroid~\cite{CLANdroid}通过分析五种语义特征点（比如代码中的标识符和调用到的Android API等），以检测相似应用。
 上述算法一来因为需要使用静态分析方法对代码进行解析，在遇到使用过代码混淆处理（如反射和代码加密）的应用时性能往往较差；二来需要基于两两比对进行检测，复杂度较高，在应用规模增大时会导致庞大的计算量。
@@ -314,7 +313,7 @@ Hooi等人的FRAUDAR通过寻找二分图中的密集子图寻找关系特别密
 
 \fullref{chp:data_description} 根据研究现状提出了本研究中关注的研究问题，阐述了本研究中数据收集的关注点并对采集到的数据进行概述。
 
-\fullref{chp:discoveries} 先从实验设置与数据搜集出发，介绍仿冒应用收集框架\mytool 与收集到的数据，再从多个视角分类提出并解说针对这批仿冒应用数据得到的发现，并从数据中挑选三个具有代表性的案例进行分析，以案例进一步深化分析结果。
+\fullref{chp:discoveries_basic} 先从实验设置与数据搜集出发，介绍仿冒应用收集框架\mytool 与收集到的数据，再从多个视角分类提出并解说针对这批仿冒应用数据得到的发现，并从数据中挑选三个具有代表性的案例进行分析，以案例进一步深化分析结果。
 % 这些视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成多个不同的研究问题。
 % 说明仿冒应用的数据收集方式并详细介绍其中三个组件（\componentA、\componentB 和\componentC）的设计与实现，
 % 结束解读后，本文从数据中挑选三个具有代表性的案例进行分析，以案例进一步深化分析结果。
