基本特征实证研究 初版

--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -64,7 +64,7 @@ Zhou等人提出了两个基于改版Dalvik虚拟机的对抗工具：其中，A
 Luo等人提出了在代码中注入大量检测节点的方法对抗重打包，并推荐开发者进行代码混淆，以避免令重打包开发者发现注入的检测节点~\cite{luo2016repackage}。
 与之相似，Zeng等人也提出了在代码中注入逻辑炸弹的方法，并在研究中讨论了多种避免重打包开发者发现代码注入的策略~\cite{zeng2018resilient}。
 
-相关实证研究方面，Khanmohammadi等人利用对重打包应用进行了一次详尽的实证研究~\cite{khanmohammadi2019empirical}。
+相关实证研究方面，Khanmohammadi等人对重打包应用进行了一次详尽的实证研究~\cite{khanmohammadi2019empirical}。
 该实证研究利用已有数据集AndroZoo~\cite{li2017androzoo++}，得出了``重打包应用的主要目的为利用广告获得收入''的结论，并回答了包括``何种类型的应用会被重打包''、``重打包对原应用属性更改如何''在内的五个研究问题，增进了研究者对重打包应用的理解。
 
 \subsection{恶意应用的研究现状}
@@ -305,21 +305,21 @@ Hooi等人的FRAUDAR通过寻找二分图中的密集子图寻找关系特别密
 % 进一步地，本研究从评论内容重复率方面提出了另一创新性排查方法，解决了数据量增大带来的大运算量问题。
 % 人工复查结果显示，两种排查方法均取得了优于现有方法的结果。
 \section{本文组织结构}
-本文共分为五章，环绕着本研究的数据搜集、分析过程和分析结果展开，各章节内容如下：
+% 本文共分为五章，环绕着本研究的数据搜集、分析过程和分析结果展开，各章节内容如下：
 
-\fullref{chp:intro} 主要提供了本文的研究背景、相关工作、本文拟采用的研究方法、拟解决的问题与本文的主要工作。
+% \fullref{chp:intro} 主要提供了本文的研究背景、相关工作、本文拟采用的研究方法、拟解决的问题与本文的主要工作。
 
-\fullref{chp:background} 从软件工程领域的实证研究出发，介绍了实证研究的常用方法和数据收集、验证标准等理论背景，再着眼于本研究的主体——Android应用，介绍了Android安全证书机制和与仿冒应用相关的重打包应用。
+% \fullref{chp:background} 从软件工程领域的实证研究出发，介绍了实证研究的常用方法和数据收集、验证标准等理论背景，再着眼于本研究的主体——Android应用，介绍了Android安全证书机制和与仿冒应用相关的重打包应用。
 
-\fullref{chp:data_description} 根据研究现状提出了本研究中关注的研究问题，阐述了本研究中数据收集的关注点并对采集到的数据进行概述。
+% \fullref{chp:data_description} 根据研究现状提出了本研究中关注的研究问题，阐述了本研究中数据收集的关注点并对采集到的数据进行概述。
 
-\fullref{chp:discoveries_basic} 先从实验设置与数据搜集出发，介绍仿冒应用收集框架\mytool 与收集到的数据，再从多个视角分类提出并解说针对这批仿冒应用数据得到的发现，并从数据中挑选三个具有代表性的案例进行分析，以案例进一步深化分析结果。
-% 这些视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成多个不同的研究问题。
-% 说明仿冒应用的数据收集方式并详细介绍其中三个组件（\componentA、\componentB 和\componentC）的设计与实现，
-% 结束解读后，本文从数据中挑选三个具有代表性的案例进行分析，以案例进一步深化分析结果。
+% \fullref{chp:discoveries_basic} 先从实验设置与数据搜集出发，介绍仿冒应用收集框架\mytool 与收集到的数据，再从多个视角分类提出并解说针对这批仿冒应用数据得到的发现，并从数据中挑选三个具有代表性的案例进行分析，以案例进一步深化分析结果。
+% % 这些视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成多个不同的研究问题。
+% % 说明仿冒应用的数据收集方式并详细介绍其中三个组件（\componentA、\componentB 和\componentC）的设计与实现，
+% % 结束解读后，本文从数据中挑选三个具有代表性的案例进行分析，以案例进一步深化分析结果。
 
-\fullref{chp:feedback} 针对仿冒应用进行了排名欺诈检测。
-针对现有检测方法的不足，本文先后提出两个具有创新性的方法对排名欺诈行为进行排查，并将排查结果与前一章的仿冒应用进行比对。
-% 结果显示，仿冒应用存在排名欺诈行为。仿冒应用与排名欺诈行为作为移动黑灰产的两个环节存在关联。
+% \fullref{chp:feedback} 针对仿冒应用进行了排名欺诈检测。
+% 针对现有检测方法的不足，本文先后提出两个具有创新性的方法对排名欺诈行为进行排查，并将排查结果与前一章的仿冒应用进行比对。
+% % 结果显示，仿冒应用存在排名欺诈行为。仿冒应用与排名欺诈行为作为移动黑灰产的两个环节存在关联。
 
-\fullref{chp:future} 对本文工作进行总结，并对下一步工作进行展望。
+% \fullref{chp:future} 对本文工作进行总结，并对下一步工作进行展望。
