Chapter discoveries-behavior revising

--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -833,6 +833,12 @@ title = {{Mobile Gaming Apps Report}}
 	citedate = {February, 23, 2020}
 }
 
+@online{keytool,
+	title = {Keytool},
+	url = {https://docs.oracle.com/javase/8/docs/technotes/tools/windows/keytool.html},
+	citedate = {August 25, 2021}
+}
+
 @inproceedings{pandita2013whyper,
 	title={$\{$WHYPER$\}$: Towards Automating Risk Assessment of Mobile Applications},
 	author={Pandita, Rahul and Xiao, Xusheng and Yang, Wei and Enck, William and Xie, Tao},
