--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -342,11 +342,14 @@
 \input{chapter-discoveries-basic}
 \clearPaperPage
 
-\input{chapter-feedback}
+\input{chapter-discoveries-behavior}
 \clearPaperPage
 
-\input{chapter-future}
-\clearPaperPage
+% \input{chapter-feedback}
+% \clearPaperPage
+
+% \input{chapter-future}
+% \clearPaperPage
 
 % 参考文献
 % 前置\cleardoublepage\phantomsection 以确保目录超链接到正确页码
