Discoveries behavior part 1

--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -839,6 +839,12 @@ title = {{Mobile Gaming Apps Report}}
 	citedate = {August 25, 2021}
 }
 
+@online{UICC_cert,
+	title = {UICC_cert},
+	url = {https://source.android.google.cn/devices/tech/config/uicc},
+	citedate = {August 25, 2021}
+}
+
 @inproceedings{pandita2013whyper,
 	title={$\{$WHYPER$\}$: Towards Automating Risk Assessment of Mobile Applications},
 	author={Pandita, Rahul and Xiao, Xusheng and Yang, Wei and Enck, William and Xie, Tao},
