Erase comment-related part. Prepare for the detection framework

--- a/edwin_2019/chapter-discoveries-behavior.tex
+++ b/edwin_2019/chapter-discoveries-behavior.tex
@@ -336,7 +336,7 @@ Zhang等人针对Android应用中的第三方库进行实证研究~\cite{zhang20
 该结果表示，国内应用市场未能有效发现、处理上架了仿冒应用的开发者，监管机制存在较大缺陷。
 从仿冒应用上架特征角度看，数据表示仿冒应用行业在2016、2017年发展迅速，有大量仿冒应用上架、大量证书活跃。
 行业热度在2018年有回落趋势，但在2018年第三季度起有复苏迹象；
-同时，数据显示近半数仿冒应用于多个应用市场中上架，表示各应用市场间未有交流机制以共同抵御仿冒应用；
+数据显示近半数仿冒应用于多个应用市场中上架，表示各应用市场间未有交流机制以共同抵御仿冒应用；
 仿冒应用可在正版应用新版发布后迅速推出，表示仿冒应用产业链已较为成熟。
 
 针对本章实证研究结果，对应用市场方有三点实用建议如下：
