--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -44,7 +44,11 @@
 \label{sec:repackaging}
 重打包指恶意开发者对原应用解包、篡改内容之后再将应用重新打包的技术~\cite{khanmohammadi2019empirical}。
 重打包应用侵害了应用原作者的知识产权，甚至可能具有恶意行为，因此也属于移动黑灰产范畴。
-目前针对重打包应用的相关工作分为三类，分别针对重打包应用的检测和防止应用被重打包，还有关于重打包的实证研究工作。
+目前针对重打包应用的相关工作分为三类，分别为关于重打包的实证研究、针对重打包应用的检测和防止应用被重打包的研究。
+
+相关实证研究方面，Khanmohammadi等人对重打包应用进行了一次详尽的实证研究~\cite{khanmohammadi2019empirical}。
+该实证研究利用已有数据集AndroZoo~\cite{li2017androzoo++}，得出了``重打包应用的主要目的为利用广告获得收入''的结论，并回答了包括``何种类型的应用会被重打包''、``重打包对原应用属性更改如何''在内的五个研究问题，增进了研究者对重打包应用的理解。
+
 
 在重打包应用检测方面，早期工作通过比对两两应用之间的信息获得应用之间的相似度。
 有研究者基于应用指令序列的方法使用模糊哈希的方法提取出应用的摘要信息，如DroidMOSS和DroidAnalytics~\cite{DroidMOSS, Zheng2013DroidAnalyticsA}；
@@ -60,13 +64,16 @@ Zhou等人提出了两个基于改版Dalvik虚拟机的对抗工具：其中，A
 Luo等人提出了在代码中注入大量检测节点的方法对抗重打包，并推荐开发者进行代码混淆，以避免令重打包开发者发现注入的检测节点~\cite{luo2016repackage}。
 与之相似，Zeng等人也提出了在代码中注入逻辑炸弹的方法，并在研究中讨论了多种避免重打包开发者发现代码注入的策略~\cite{zeng2018resilient}。
 
-相关实证研究方面，Khanmohammadi等人对重打包应用进行了一次详尽的实证研究~\cite{khanmohammadi2019empirical}。
-该实证研究利用已有数据集AndroZoo~\cite{li2017androzoo++}，得出了``重打包应用的主要目的为利用广告获得收入''的结论，并回答了包括``何种类型的应用会被重打包''、``重打包对原应用属性更改如何''在内的五个研究问题，增进了研究者对重打包应用的理解。
-
 \subsection{恶意应用的研究现状}
-针对恶意应用的研究可分为两个方面，分别是面向恶意应用检测的研究与面向恶意应用进行实证研究工作。
+针对恶意应用的研究可分为两个方面，分别是面向恶意应用进行实证研究工作与面向恶意应用检测的研究。
 
-恶意应用检测方法可分为几个方向。
+面向恶意应用的实证研究众多，较有代表性的有以下两篇文献：
+Felt等人的研究~\cite{Felt2011ASO}仔细剖析了来自多个不同平台的46个恶意程序样本以了解这些样本的激励机制，揭示了这些样本的运行机制和行为策略，为后人抵御此类恶意行为提供参考；
+Zhou和Jiang~\cite{Zhou2012DissectingAM}搜集了来自多个主要恶意应用家族的、超过1,200个恶意应用样本，并系统性地描绘了这批样本的不同性质，包括其安装手段、激活机制和其如何执行有效负载（实现恶意行为）。
+虽然恶意应用与仿冒应用有重合之处，但两者有一定区别，相关理论知识直接套用并不合适。
+
+以上述实证研究与数据分析作为基础，研究者对恶意应用有了较好的了解，从而得以有针对性地进行恶意应用检测。
+相关方法可大致分为静态分析、动态分析与机器学习三个方向。
 早期研究通过静态分析手段对恶意应用进行检测，包括Enck等人提出的Kirin，在应用安装时检测应用权限，从而拦截恶意应用的安装~\cite{enck2009lightweight}；
 Felt等人提出的Stowaway~\cite{felt2011android}利用API调用分析和权限分析，寻找权限过大（Overprivileged）的应用；
 RiskRanker~\cite{grace2012riskranker}则提出了一个两阶恶意应用检测手段，先筛选出具有root行为和可能导致隐私泄露的应用，再找出其中具有危险Dalvik代码加载行为的应用。
@@ -79,55 +86,49 @@ ParanoidAndroid~\cite{portokalidis2010paranoid}提出了将恶意检测方法迁
 针对此问题，研究者开始利用机器学习技术检测恶意应用。
 Chen等人从大规模数据集中总结出了恶意应用的两类特征，再将其用于分类器模型训练，提出了检测工具StormDroid~\cite{chen2016stormdroid}，与之类似的方法还有CrowDroid~\cite{burguera2011crowdroid}，DroidMat~\cite{wu2012droidmat}，Adagio~\cite{gascon2013structural}，MAST~\cite{chakradeo2013mast}，DroidAPIMiner~\cite{aafer2013droidapiminer}与Drebin~\cite{arp2014drebin}。
 
-在面向恶意应用的实证研究方面，
-Felt等人的研究~\cite{Felt2011ASO}仔细剖析了来自多个不同平台的46个恶意程序样本以了解这些样本的激励机制，揭示了这些样本的运行机制和行为策略，为后人抵御此类恶意行为提供参考。
-Zhou和Jiang~\cite{Zhou2012DissectingAM}搜集了来自多个主要恶意应用家族的、超过1,200个恶意应用样本，并系统性地描绘了这批样本的不同性质，包括其安装手段、激活机制和其如何执行有效负载（实现恶意行为）。
-虽然恶意应用与仿冒应用有重合之处，但两者有一定区别，相关理论知识直接套用并不合适。
-
-\subsection{其他类型应用的研究现状}
+\subsection{其他相关研究}
 Andow等人针对灰色应用的研究~\cite{Andow2016ASO}从Google Play应用商店中采集了多个应用样本。
 该研究将样本分类，定义了高仿应用（Imposter）、移动广告应用（Madware）等9种不同的灰色应用。
 灰色应用指不具有明显恶意行为，但应用意图存疑、又或是会向系统申请过多权限的应用程序。
 因此，这类应用不是恶意应用，但由于其盈利方式可疑，可将其归入移动黑灰产内。
 
 另一方面，Hu等人针对市面上的欺诈约会应用进行了一次实证研究~\cite{hu2019dating}。
-该研究中的欺诈约会应用声称自己为约会应用，实则诱导用户开通会员服务。
+该研究中的欺诈约会应用声称自己为约会应用，实则诱导用户开通会员服务，也应归入黑灰产应用范畴。
 分析发现，用户在此类应用中遇到的其他``用户''多数不由真人控制，而是具有预设对话模板的聊天机器人。
 此外，研究还分析了该类应用的商业模式与分发渠道，评估了受害者的数量，对此类应用的生态进行了详尽解读。
 该研究还通过直接检测相同评论和标记可疑用户的方式对此类应用进行排名欺诈检测。
-比起本研究中提出的方法，该研究采用的两种方法均比较原始，对结果准确程度有一定影响。
 
 Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通过静态分析技术与敏感词识别，对手机银行应用进行自动化三段式风险评估。
 同期，他们在一个实证研究中利用Ausera从693个手机银行应用中检出超过两千个漏洞，向对应的60家银行发送了漏洞报告，并检查了新发行的手机银行应用以跟进漏洞修补进程~\cite{chen2018mobile}。
 在被检出漏洞的60家银行中，21家确认了该研究反馈的漏洞，进行了对应修复，作者随后根据修复状况进行案例研究，分别面向银行、学者与政府，共给出了9条用于改善手机银行应用安全性与市场环境的实用建议。
 与之类似，本研究也从多个方面出发，提出了防范仿冒应用、净化市场环境的实用建议。
 
-\subsection{针对应用评论的相关研究现状}
-近年来，除了利用应用程序牟利以外，移动黑灰产业也开始进入应用市场评论的领域。
-相关工作也可以分为检测与相关的实证研究两类。
+% \subsection{针对应用评论的相关研究现状}
+% 近年来，除了利用应用程序牟利以外，移动黑灰产业也开始进入应用市场评论的领域。
+% 相关工作也可以分为检测与相关的实证研究两类。
 
-检测方面，
-Zhu等人提出了一个利用评价历史记录检测应用是否具有排名欺诈行为的研究~\cite{zhu2014discovery}。
-该研究提出，一般应用的排名在上升期（Raising phrase）和下降期（Recession phrase）之间会有一段维持期（Maintaining phrase），维持期过短且排名在短时间内剧烈波动的应用很可能具有排名欺诈行为。
-然而，用该方法进行检测需要持续收集应用在市场上的评分数据，因此对数据采集有一定要求。
-Lim等人分析了差评水军（Review spammers）的特征并将其用于建模，以检测类似行为~\cite{lim2010detecting}；
-Xie等人利用图论挖掘评论中开展共谋攻击（Collusion attack）的用户群组~\cite{xie2014grouptie}，并在后续研究中将该方法拓展成一个检测系统~\cite{xie2016you}。
-与之相似，Chen等人同样使用了基于图论的方法检测共谋攻击~\cite{chen2017toward},
-Hooi等人的FRAUDAR通过寻找二分图中的密集子图寻找关系特别密切的用户与应用，从而找出可能提供排名欺诈服务的可疑用户与使用了该服务的应用~\cite{hooi2016fraudar}。
+% 检测方面，
+% Zhu等人提出了一个利用评价历史记录检测应用是否具有排名欺诈行为的研究~\cite{zhu2014discovery}。
+% 该研究提出，一般应用的排名在上升期（Raising phrase）和下降期（Recession phrase）之间会有一段维持期（Maintaining phrase），维持期过短且排名在短时间内剧烈波动的应用很可能具有排名欺诈行为。
+% 然而，用该方法进行检测需要持续收集应用在市场上的评分数据，因此对数据采集有一定要求。
+% Lim等人分析了差评水军（Review spammers）的特征并将其用于建模，以检测类似行为~\cite{lim2010detecting}；
+% Xie等人利用图论挖掘评论中开展共谋攻击（Collusion attack）的用户群组~\cite{xie2014grouptie}，并在后续研究中将该方法拓展成一个检测系统~\cite{xie2016you}。
+% 与之相似，Chen等人同样使用了基于图论的方法检测共谋攻击~\cite{chen2017toward},
+% Hooi等人的FRAUDAR通过寻找二分图中的密集子图寻找关系特别密切的用户与应用，从而找出可能提供排名欺诈服务的可疑用户与使用了该服务的应用~\cite{hooi2016fraudar}。
 
-实证研究方面，Rahman等人对Google Play中虚假评论行为的实证研究~\cite{rahman2019art}在公开确认该产业链存在的同时，也揭露了该产业的行为模式、生存情况甚至从业人员收入水平等方面的信息。
+% 实证研究方面，Rahman等人对Google Play中虚假评论行为的实证研究~\cite{rahman2019art}在公开确认该产业链存在的同时，也揭露了该产业的行为模式、生存情况甚至从业人员收入水平等方面的信息。
 
-作为黑灰色产业链下游环节，虚假应用评论（即排名欺诈行为）已在前述研究中被证明与欺诈约会应用存在关联。
-因此，排名欺诈也很可能与仿冒应用相结合，为移动黑灰产从业者牟取更多利益，有必要开展相关分析进行确认。
+% 作为黑灰色产业链下游环节，虚假应用评论（即排名欺诈行为）已在前述研究中被证明与欺诈约会应用存在关联。
+% 因此，排名欺诈也很可能与仿冒应用相结合，为移动黑灰产从业者牟取更多利益，有必要开展相关分析进行确认。
 
 \subsection{研究现状小结}
 综合上述分析，与仿冒应用同属黑灰产的重打包应用和恶意应用，甚至是日常生活中常用的手机银行类应用，均有对应研究可提供参考。
-前人的实证研究也收集了较为大量的重打包应用、恶意应用和手机银行应用数据，并提供了重打包应用与原版差异、恶意应用传播方式与负载执行方式、手机银行应用常见漏洞等指导性信息，帮助专业人员改善现有移动应用环境。
-除此以外，亦有学者对于移动应用相关的应用评论领域进行研究，且给出了对应领域知识。
+前人的实证研究收集了较为大量的重打包应用、恶意应用和手机银行应用数据，并提供了重打包应用与原版差异、恶意应用传播方式与负载执行方式、手机银行应用常见漏洞等指导性信息，帮助专业人员改善现有移动应用环境。
+在丰富的前序研究提供的领域知识与数据支持下，各界才得以对重打包应用、恶意应用开展后续的检测研究。
 相比之下，仿冒应用的相关数据和研究成果都乏善可陈。
 
-此外，在上述研究中，无论是对恶意应用、重打包应用或是对可疑评论进行检测，都需要有一定领域知识或洞见（Insight）作为理论支撑。
-对仿冒应用而言，学术界与工业界对其认知均较贫乏，``基于新见解进行拓展研究''式的研究手段尚未适用于仿冒应用。
+换言之，在上述研究中，无论是对恶意应用还是重打包应用进行检测，都需要有一定领域知识或洞见（Insight）作为理论支撑。
+对仿冒应用而言，学术界与工业界对其认知均较贫乏，``基于新见解进行技术拓展改良''式的研究手段尚未适用于仿冒应用。
 因此，着眼于领域知识梳理的实证研究更适用于仿冒应用在当下的研究场景。
 % \subsection{实证研究}
 % 实证研究是一种基本研究技术，旨在针对特定方法在实际应用场景下的真实状况或对应产物进行数据收集、调查与分析，以让研究者了解事物的工作原理或使理论得以验证。
@@ -220,9 +221,10 @@ Hooi等人的FRAUDAR通过寻找二分图中的密集子图寻找关系特别密
 	      为能较全面地认识仿冒应用，需要从不同角度对其进行解读。
 	      因此，从应用基本属性、应用作者行为等多角度对仿冒应用进行解析，是本文研究的重点之一。
 
-	\item \emph{仿冒应用的市场反馈如何？} \quad
-	      想要较为全面地了解仿冒应用的生态，仅从基本特性分析是不足够的。
-	      为拓展对仿冒应用的认识，本文选择从市场反馈角度入手，与其他应用对比，分析仿冒应用是否有排名欺诈行为。
+	\item \emph{是否能有效地筛选仿冒应用} \quad
+	      根据日常经验不难发现，在现阶段，用户在实际使用中经常能搜索到仿冒应用，应用市场对仿冒应用的筛选排除并未完善。
+	      恶意应用、重打包应用的研究发展表明，充分认识移动黑灰产应用特征对后续的对应检测、发现有明显促进作用。
+	      同理，作者希望可基于对仿冒应用进行的解读与画像，设计有效流程帮助各大市场梳理、排除仿冒应用。
 	      这是本文研究的另一重点，也是本文的创新点。
 \end{itemize}
 
@@ -234,18 +236,18 @@ Hooi等人的FRAUDAR通过寻找二分图中的密集子图寻找关系特别密
 	      \setlength{\parskip}{0pt}
 	      \setlength{\parsep}{0pt}
 	\item \emph{全面的数据集整理} \quad
-	      借助仿冒应用收集框架\mytool，本研究尽可能全面地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，并进一步从360手机助手商店中搜集了来自进27万名用户的36万条数据，以供其后的排名欺诈检测使用。
+	      借助仿冒应用收集框架\mytool，本研究尽可能全面地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，以供其后的相关研究使用。
 
 	\item \emph{仿冒应用数据画像与现实案例分析} \quad
-	      本研究从基本信息与开发者行为两个方向入手，对仿冒引用进行了较为全面的数据画像。
-	      然后，本文还从数据集中挑选出了三组数据，进行了三个案例分析，深化在数据画像中得到的领域知识。
+	      本文从基本信息与开发者行为两个方向入手分别进行了实证研究，前者对仿冒引用进行了较为全面的数据画像，后者根据仿冒应用开发者行为推断出现有应用市场监管不足之处。
+	      两组研究除了从较高维度进行数据分析外，还从数据集中挑选出应用和证书实例，分别展开案例讨论，以深化在数据画像和行为分析中得到的领域知识。
 
 	\item \emph{提供实用建议} \quad
-	      基于在实证研究中的发现，本文分析了现有应用市场的不足之处，并分别面向普通用户、应用市场和相关从业者提供了实用建议。
+	      基于在实证研究中的发现，本文分析了仿冒应用特征的可能成因与现有应用市场的不足之处，由此分别面向普通用户、应用市场和相关从业者提供了实用建议。
 
-	\item \emph{针对仿冒应用的排名欺诈检测} \quad
-	      本研究先利用前文提及的FRAUDAR进行排名欺诈行为检测，但该方法存在一定局限性，未能提供较为良好的结果。
-	      因此，本研究提出两个排名欺诈检测方法，分别从评论用户可信度与评论内容相似度出发，以验证仿冒应用与排名欺诈之间是否存在关联，完善对仿冒应用的生态了解。
+	\item \emph{基于聚类与规则的仿冒应用检测框架} \quad
+	      依靠前序研究中对仿冒应用的理解与解读，作者设计并实现了基于聚类与规则的仿冒应用检测框架。
+
 \end{itemize}
 
 % 现有的排名欺诈挖掘工作均具有其各自的局限性，或是对评分数据有连续收集要求，或是要求检测者有已知的排名欺诈群体，并不能直接应用到本研究收集的数据中。
