Detection-Framework init.

--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -236,7 +236,7 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 	      \setlength{\parskip}{0pt}
 	      \setlength{\parsep}{0pt}
 	\item \emph{全面的数据集整理} \quad
-	      借助仿冒应用收集框架\mytool，本研究尽可能全面地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，以供其后的相关研究使用。
+	      借助自行实现的仿冒应用收集框架，本研究尽可能全面地收集了来自29个应用来源的约14万个应用样本，并从中筛选出5万个仿冒样本，整理成已知的首个仿冒应用数据集，以供其后的相关研究使用。
 
 	\item \emph{仿冒应用数据画像与现实案例分析} \quad
 	      本文从基本信息与开发者行为两个方向入手分别进行了实证研究，前者对仿冒引用进行了较为全面的数据画像，后者根据仿冒应用开发者行为推断出现有应用市场监管不足之处。
@@ -245,8 +245,8 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 	\item \emph{提供实用建议} \quad
 	      基于在实证研究中的发现，本文分析了仿冒应用特征的可能成因与现有应用市场的不足之处，由此分别面向普通用户、应用市场和相关从业者提供了实用建议。
 
-	\item \emph{基于聚类与规则的仿冒应用检测框架} \quad
-	      依靠前序研究中对仿冒应用的理解与解读，作者设计并实现了基于聚类与规则的仿冒应用检测框架。
+	\item \emph{基于规则的仿冒应用检测框架} \quad
+	      依靠前序研究中对仿冒应用的理解与解读，作者设计并实现了基于规则的仿冒应用检测框架\mytool 。
 
 \end{itemize}
 
@@ -309,11 +309,13 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 
 \fullref{chp:background} 介绍相关技术背景，从软件工程领域的实证研究出发，介绍实证研究的常用方法和数据收集、验证标准等理论背景，再着眼于本研究的主体——Android应用，介绍了Android安全证书机制和与仿冒应用相关的重打包技术。
 
-\fullref{chp:data_description} 介绍整个研究的设置，包括根据研究现状提出研究问题、确立研究对象，阐述数据收集的相关考量，并与其他研究收集的数据进行对比。
+\fullref{chp:research_settings} 介绍整个研究的设置，包括根据研究现状提出研究问题、确立研究对象，阐述数据收集的相关考量，并与其他研究收集的数据进行对比。
 
 \fullref{chp:discoveries_basic} 从仿冒应用与原版应用相似度、影响应用被仿冒的严重程度的因素及仿冒应用行为三点入手，对与仿冒应用基本特征相关的三个方面进行实证研究，最后针对研究结果分别向用户、应用市场和应用开发者提供实用建议。
 
 \fullref{chp:discoveries_behavior} 则结合应用证书视角与结合时间维度视角进行探索，分析现有应用市场监管策略存在的不足，针对性地提出改善措施。
+
+\fullref{chp:framework_prototype} 提出了一个基于规则的仿冒应用检测框架，并将前两章实证研究所得的经验总结为规则，对框架进行了有效性检验。
 
 % % 这些视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成多个不同的研究问题。
 % % 说明仿冒应用的数据收集方式并详细介绍其中三个组件（\componentA、\componentB 和\componentC）的设计与实现，
