--- a/edwin_2019/chapter-research-settings.tex
+++ b/edwin_2019/chapter-research-settings.tex
@@ -1,5 +1,5 @@
 \chapter{实证研究设置}
-\label{chp:data_description}
+\label{chp:research_settings}
 
 仿冒应用的生态是移动黑灰色产业研究中尚未被探明的一环。
 为了补上这一研究空白，本文先提出了一系列针对仿冒应用的研究问题，再使用实证研究技术对这些问题一一解答。
@@ -138,22 +138,22 @@ RQ6：仿冒应用的上架行为是否有特征？
 \end{figure}
 
 
-为应对第二个挑战，本研究提出了基于广度优先搜索（Breadth-First Search，简称BFS）算法的搜索框架\mytool，迭代收集与目标应用相关的样本，整体流程可见\autoref{fig:FakeRevealer}。
-具体地，对于每一款目标应用，\mytool 的收集流程分为三个部分：先以正版应用样本的\emph{包名}和\emph{应用名}作为查询条件放入迭代搜索器，迭代搜索器发出查询请求，从Janus平台中收集与目标应用相关的所有App样本，提取出样本的相关数据返回至应用收集器;
+为应对第二个挑战，本研究提出了基于广度优先搜索（Breadth-First Search，简称BFS）算法的搜索框架\autoref{fig:FakeRevealer}。
+具体地，对于每一款目标应用的收集流程分为三个部分：先以正版应用样本的\emph{包名}和\emph{应用名}作为查询条件放入迭代搜索器，迭代搜索器发出查询请求，从Janus平台中收集与目标应用相关的所有App样本，提取出样本的相关数据返回至应用收集器;
 其后，应用收集器将数据转移至应用过滤器，利用过滤器判断收集到的应用数据源于正版应用或仿冒应用，保存仿冒应用数据，提取出正版应用的\emph{包名}和\emph{应用名}；
 最后，将上一步中获得的新的正版应用信息（\emph{包名}和\emph{应用名}）再次放入迭代搜索器，开始下一次循环，从Janus中进行查询，获取更多与正版应用相关的样本。
 
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\textwidth]{./Figures/edwin-fakerevealer}
-	\caption{\mytool 整体流程}
+	\caption{搜索框架整体流程}
 	\label{fig:FakeRevealer}
 	\vspace{-3mm}
 \end{figure}
 
 第三个挑战，可利用Android签名证书机制（详见第二章）解决。
 对某个APK安装包而言，该机制提供了其被最后一次修改时的修改人信息。
-因此，对于任一个被\mytool 收集到的APK，均可归入以下三种情况：
+因此，对于任一个被搜索框架收集到的APK，均可归入以下三种情况：
 
 第一，该APK为正版应用，由正版开发者开发，也并未被篡改，应用证书与正版应用证书一致，是目标应用的某一版本；
 第二，该APK原本为正版应用，由正版开发者开发，但被仿冒应用开发者解包篡改，加入、删除或修改了部分数据，成为仿冒应用。
@@ -183,7 +183,7 @@ RQ6：仿冒应用的上架行为是否有特征？
 当然，这也是这三款App热度高的原因——这几款App都被预装到了对应手机品牌厂商的每一部Android设备中，而OPPO、华为和小米又是国内最大的几家手机厂商，这几款App自然也会有庞大的用户基数。
 因此，本研究最后的目标应用只有47款。
 
-对这47款目标应用，\mytool 共检索到138,106个应用样本，样本源于29个不同渠道。
+对这47款目标应用，搜索框架共检索到138,106个应用样本，样本源于29个不同渠道。
 其中，69,614个应用样本持有官方开发者证书，52,638个应用样本并不具有官方证书。
 余下部分应用样本为某些应用的发布在不同应用市场同一版本，在对各样本计算SHA1码去重筛选后被排除（共计15,854个）。
 样本SHA1码是使用SHA1哈希算法对整个APK文件进行数据摘要之后获取到的编码串，可认为每个样本都有独一无二的SHA1码。
