--- a/edwin_2019/chapter-framework-prototype.tex
+++ b/edwin_2019/chapter-framework-prototype.tex
@@ -3,22 +3,49 @@
 
 前两章分别从仿冒应用基本特征与仿冒应用开发者的行为特征入手，对仿冒应用开展实证研究，获取了仿冒应用命名、大小、投放偏好等特性。
 基于这些特性，作者总结出了数条规则，设计了仿冒应用检测框架\mytool 。
+通过使用\mytool ，应用市场方可在大规模应用中实现对已知正版应用及其对应仿冒样本的快速鉴别，提高应用市场方的审核速度。
 本章将阐述\mytool 的设计与实现，并对后续的系统实验进行解析。
 
 \section{框架设计与实现}
 
 \subsection{整体设计}
 \mytool 是一个轻量的基于规则的仿冒应用检测框架，具有可插拔式的规则配置模块，用户可根据实际向其中配置仿冒应用的检测规则，进行自定义筛选。
-应用市场方可将其用于大规模的Android应用检测，自动筛选出其中的潜在仿冒应用，再结合人工审查，完成对仿冒应用的验证与归类，维护良好的应用市场环境。
+应用市场方可将其用于大规模的Android应用检测，自动筛选出其中的正版应用与潜在仿冒应用，再结合人工审查，完成对仿冒应用的验证与归类，维护良好的应用市场环境。
 此外，尽管\mytool 设计的初衷为检测应用市场中的仿冒应用，但基于其规则可插拔的特点，市场方的开发人员也可对其稍加改造后，配置其他规则，以进行针对重打包应用、恶意应用等移动灰黑产的检测。
 
 % todo: 框架流程配图
 
-展示了\mytool 的整体工作流程，框架主要分为\componentA 、\componentB 、\componentC 和人工审查四个部分。
+展示了\mytool 的整体工作流程，框架主要分为\textbf{\componentA} 、\textbf{\componentB} 、\textbf{\componentC} 和\textbf{\componentD} 四个部分。
+\componentD 为存储应用特征的数据库，用户在使用前，需要先在\componentD 中输入部分正版应用特征信息和其他相关信息（如开发者黑名单）作为先验知识。
+\mytool 以Android应用集为输入，先利用\componentA 对应用集进行初筛，过滤与正版应用不相关或相似度较低的应用，降低后续检测与人工审核的压力。
+之后，应用样本进入\componentB 。
+\componentB 提取应用中包括基础数据（如应用名、版本、证书信息等）和静态分析数据（如应用代码中的方法信息、类信息等）在内的应用数据。
+其后，\componentC 将应用数据分发到各规则检测器进行检测。
+\componentC 支持规则插拔，用户可根据实际需要，在\componentC 中增加或删减对应规则，使框架输出更准确的结果。
+各规则根据\componentD 中的特征信息，分别作出判断。
+最后，\componentC 汇总各规则结果，输出疑似仿冒应用列表，以及各疑似仿冒应用在各规则的对应检查结果。
+结合框架给出的列表和检测结果，应用市场审核人员可对仿冒应用进行快速判别，提高审核效率。
+同时，各规则的检测结果也可被解读为仿冒应用开发者的开发趋势，应用市场方可根据仿冒样本命中的规则，了解不同应用对应仿冒的趋势、提取更多仿冒应用特征，从而为不同应用指定更为合适的规则。
 
-\mytool 以Android应用集为输入，先利用\componentA 对应用集进行初筛，过滤出、，
+本框架基于Python 3编写。
 
 \subsection{\componentA }
+在面向规模较大的应用集输入时，\componentA 有三个主要功能：
+其一为通过应用证书信息比对，筛出黑名单开发者的应用，拒绝将其上架；
+其二为通过将输入的应用与已知正版应用匹配，将与已知正版应用无关的输入过滤，减少后续检测压力；
+其三为对输入的应用分类，以便在\componentC 中根据分类进行对应的规则检测。
+
+证书信息比对部分的开发者黑名单由应用市场方自行维护，存于\componentD 中，其中应包括已知仿冒开发者的证书信息与用于在Android Studio等开发环境调试的debug证书信息。
+应用市场可将每次检测后确认的仿冒应用证书加入黑名单，定期与其他各应用市场共享黑名单信息，防止\fullref{chp:discoveries_basic}中发现的仿冒应用开发者在多个市场中上传应用、利用debug证书上传应用等风险再次产生。
+
+\componentA 的匹配功能分为两部分，分别为应用名匹配与应用图标匹配。
+在应用名匹配部分，判断输入应用是否与某一已知正版应用匹配的依据源于\componentD 中的正版应用命名模式。
+一个正版应用的命名模式由若干个特征点通过逻辑运算（与、或运算）连接而成，每个特征点为该正版应用的命名特征。
+一个特征点可由正则表达式表示，也可以是应用名长度范围。
+由\fullref{chp:discoveries_basic}总结可得，仿冒应用的命名与对应的正版应用十分接近，因此用户也可给出某正版应用名模板与相似度阈值作为特征点，加入该正版应用的命名模式。
+
+不被\componentA 判定为与已知正版应用相关、且应用证书不在开发者黑名单中的应用样本将进入应用市场方原有审核流程，而非由本框架判定是否仿冒应用或可否上架。
+
 \subsection{\componentB }
 \subsection{\componentC }
 \subsection{人工审查与特征提取}
