--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -315,7 +315,7 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 
 \fullref{chp:discoveries_behavior} 则结合应用证书视角与结合时间维度视角进行探索，分析现有应用市场监管策略存在的不足，针对性地提出改善措施。
 
-\fullref{chp:framework_prototype} 提出了一个基于规则的仿冒应用检测框架，并将前两章实证研究所得的经验总结为规则，对框架进行了有效性检验。
+以前两章实证研究所得的经验总结为规则，作者于\fullref{chp:framework_prototype} 提出并实现了一个基于规则的仿冒应用检测框架，然后基于新采集的应用数据对框架进行了有效性检验。
 
 % % 这些视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成多个不同的研究问题。
 % % 说明仿冒应用的数据收集方式并详细介绍其中三个组件（\componentA、\componentB 和\componentC）的设计与实现，
