--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -109,6 +109,7 @@
 \newcommand\componentA{过滤模块}
 \newcommand\componentB{数据提取模块}
 \newcommand\componentC{可插拔式规则配置模块}
+\newcommand\componentD{应用特征库}
 
 %交叉引用格式
 \renewcommand\figureautorefname{图}
