Framework prototype renew

--- a/edwin_2019/chapter-framework-prototype.tex
+++ b/edwin_2019/chapter-framework-prototype.tex
@@ -35,6 +35,8 @@
 其二为通过将输入的应用与已知正版应用匹配，将与已知正版应用无关的输入过滤，减少后续检测压力；
 其三为对输入的应用分类，以便在\componentC 中根据分类进行对应的规则检测。
 
+应用进入框架后，将先被提取证书信息，进行黑名单比对。
+若应用证书于黑名单内，该应用将被直接拒绝上架，流程结束。
 证书信息比对部分的开发者黑名单由应用市场方自行维护，存于\componentD 中，其中应包括已知仿冒开发者的证书信息与用于在Android Studio等开发环境调试的debug证书信息。
 应用市场可将每次检测后确认的仿冒应用证书加入黑名单，定期与其他各应用市场共享黑名单信息，防止\fullref{chp:discoveries_basic}中发现的仿冒应用开发者在多个市场中上传应用、利用debug证书上传应用等风险再次产生。
 
@@ -42,12 +44,56 @@
 在应用名匹配部分，判断输入应用是否与某一已知正版应用匹配的依据源于\componentD 中的正版应用命名模式。
 一个正版应用的命名模式由若干个特征点通过逻辑运算（与、或运算）连接而成，每个特征点为该正版应用的命名特征。
 一个特征点可由正则表达式表示，也可以是应用名长度范围。
-由\fullref{chp:discoveries_basic}总结可得，仿冒应用的命名与对应的正版应用十分接近，因此用户也可给出某正版应用名模板与相似度阈值作为特征点，加入该正版应用的命名模式。
+由\fullref{chp:discoveries_basic}总结可得，仿冒应用的命名与对应的正版应用十分接近，因此用户也可给出某正版应用名与相似度阈值作为特征点，加入该正版应用的命名模式。
+比如，由观察可得\textit{爱奇艺}的应用名常有更改，但总会以``爱奇艺''起始，可用\textit{app\_name(``爱奇艺\*'')}表示该类特征；
+而\textit{similarity(``开心消消乐'', 0.6)}则会将与``开心消消乐''相似度大于等于0.6的应用名纳入匹配范围。
 
+应用图标匹配部分，应用市场方需要先为已知正版应用配置一个图标和相似度阈值作为比较标准，\componentA 获取输入应用图标后，对两者进行相似度计算，若相似度大于等于阈值，则认为两者相似。
+现有的主流图像相似度算法可分为四类，分别为严格判别算法、直方图比较、哈希算法和特征点匹配法。
+严格判别算法即对两图片的像素点作严格一一比对的算法，速度较快，但敏感度太高，鲁棒性并不好，只适用于严格判定图像全等的领域；
+直方图比较则将两张图片的直方图数据归一化后进行相似度比较；
+哈希算法会先为每张图片生成一个哈希串，再通过哈希串之间对比实现图像相似度对比，可理解为将图像相似度转化为字符串相似度计算的算法；
+特征点匹配法则通过提取图像中的特征点，计算特征点的特征向量后，比对不同图像的特征向量进行相似度比对。
+由于本框架需比对的是应用图标略缩图，综合实现难度与性能考虑，本框架采用了哈希算法中的感知哈希计算图像相似度。
+
+具体实现方面，证书信息在利用apktool对应用拆包后，使用JDK的keytool工具提取，APK中的图标文件具有固定路径，其提取也在apktool拆包后进行；
+应用名提取由Android SDK中的aapt命令行工具对APK文件进行解析后，从解析结果中截取获得；
+字符串匹配的相似度由两者之间的编辑距离与给出应用名的长度之比计算。
+
+匹配之后，被判定为与已知应用相似的样本会被打上对应标签，进行后续的数据提取和规则判定。
 不被\componentA 判定为与已知正版应用相关、且应用证书不在开发者黑名单中的应用样本将进入应用市场方原有审核流程，而非由本框架判定是否仿冒应用或可否上架。
 
 \subsection{\componentB }
+
+经过\componentA 对应用初步筛选后，\componentB 对应用进一步提取信息，以满足\componentC 中各规则的数据要求。
+本模块提取的数据有两类，一类为应用的基本数据，另一类为应用的代码数据。
+基本数据指应用的包名、构建应用使用的Android API版本、应用版本名称、应用版本号、应用大小、应用中声明使用的权限、应用入口Activity信息和证书信息，证书信息可利用keytool工具提取，其他信息可通过aapt命令行工具获得。
+代码数据则指利用代码分析技术获取的数据。借助静态分析技术，\componentB 可从代码中获取应用中的模块结构信息，包括应用中的类信息与各类中包含的方法信息。
+
+具体来说，\componentB 借助Androguard~\cite{Androguard}，对应用中的dex文件进行反编译，获取反编译后的代码信息。
+假定应用主体代码由Java编写，按类的定义者区分，可将应用代码中包含的类分为三种类型，分别为系统类，用户自定义类和第三方类。
+系统类指Java本身或Android官方提供的开发框架中的类，如一切类的基类\textit{java.lang.Object}和Android四大组件之一Activity的基类\textit{android.app.Activity}等，是最基础的类；
+第三方类指并非由Java语言本身提供、也并非开发者在项目中编写的类，通常包含开发者引入的第三方库代码中，如\textit{org.json}常用于json相关操作；
+用户自定义类指应用开发者在开发该应用时，于项目中自行编写定义的类。
+Androguard在获取类信息时，会将类标记为外部类与非外部类，其中外部类指系统类和第三方类，非外部类即用户自定义类。
+\componentB 在处理时，会进一步将外部类中的系统类剔除，一来可减少后续分析的数据量，二来在除去系统类之后，能更方便地对样本中使用的第三方库进行识别与匹配。
+
+除了类信息，\componentB 还提取应用中的方法信息协助之后的规则检测。
+提取的方法信息包括用户自定义的所有方法以及Android框架中较为敏感的方法调用信息。
+用户自定义方法通过对Androguard中获得的非外部类进行方法分析获取；
+敏感方法调用信息则以自底向上的方法进行排查。
+在基本数据获取阶段，\componentB 通过aapt获得了构建应用的Android API版本和应用中声明使用的权限，而Androguard附带了各Android API版本中API与权限的映射关系。
+因此，结合以上信息可获取在某应用中可能会被调用到的敏感API。
+之后，可在Androguard的协助下对API的调用链进行回溯，具体算法可见。
+对于每个敏感API，算法遍历应用中的各个用户自定义类，排查应用中是否有对该敏感API的调用；
+如果所有用户自定义类中均没有调用该敏感API，排查下一个敏感API。
+如果有，利用Androguard回溯对该API进行调用的方法，层层回溯，直至找到调用起点，将调用起点方法和敏感API对（\textit{<starting\_point, sensitive\_API>}）保存。
+对于某个已声明的权限，如果其对应的敏感API均没有调用记录，则该类情况可能是：一，该权限为由开发者声明的冗余权限，可能会被恶意应用利用，造成额外风险；二，开发者通过Java反射机制调用了与权限对应的敏感API，导致该调用无法被静态分析扫描到。
+无论是哪种情况，都可能对用户安全造成损害，也可被视作特征点，因此\componentB 也会为应用的该权限记上特殊标记。
+
 \subsection{\componentC }
+
+
 \subsection{人工审查与特征提取}
 \section{系统实验}
 \subsection{数据收集}
